syntax = "proto3";

import "proto/auth.proto";
import "proto/ballot.proto";
import "proto/law.proto";
import "proto/user.proto";
import "proto/upstream.proto";

package proto;

service WelawSvc {
    // Auth
    rpc Login(LoginRequest) returns (LoginReply) {}
    rpc LoginUser(LoginUserRequest) returns (LoginUserReply) {}
    rpc MakeToken(MakeTokenRequest) returns (MakeTokenReply) {}
    rpc LoginAs(LoginAsRequest) returns (LoginAsReply) {}
    rpc Logout(LogoutRequest) returns (LogoutReply) {}
    // Ballot
    rpc CreateVote(CreateVoteRequest) returns (CreateVoteReply) {}
    rpc UpdateVote(UpdateVoteRequest) returns (UpdateVoteReply) {}
    rpc GetVote(GetVoteRequest) returns (GetVoteReply) {}
    rpc DeleteVote(DeleteVoteRequest) returns (DeleteVoteReply) {}
    rpc ListVotes(ListVotesRequest) returns (ListVotesReply) {}
    // Law
    rpc CreateLaw(CreateLawRequest) returns (CreateLawReply) {}
    /*rpc ListLawBranches(ListLawBranchesRequest) returns (ListLawBranchesReply) {}*/
    /*rpc ListVersions(ListVersionsRequest) returns (ListVersionsReply) {}*/
    rpc GetLaw(GetLawRequest) returns (GetLawReply) {}
    rpc ListLaws(ListLawsRequest) returns (ListLawsReply) {}
    /*rpc CreateVersion(CreateVersionRequest) returns (CreateVersionReply) {}*/
    /*rpc CreateLawVersion(CreateLawVersionRequest) returns (CreateLawVersionReply) {}*/
    /*rpc DiffLaw(DiffLawRequest) returns (DiffLawReply) {}*/
    /*rpc DiffBranch(DiffLawRequest) returns (DiffLawReply) {}*/
    // Upstream
    rpc CreateUpstream(CreateUpstreamRequest) returns (CreateUpstreamReply) {}
    rpc GetUpstream(GetUpstreamRequest) returns (GetUpstreamReply) {}
    rpc ListUpstreams(ListUpstreamsRequest) returns (ListUpstreamsReply) {}
    rpc UpdateUpstream(UpdateUpstreamRequest) returns (UpdateUpstreamReply) {}
    // User
    rpc CreateUser(CreateUserRequest) returns (CreateUserReply) {}
    rpc GetUser(GetUserRequest) returns (GetUserReply) {}
    rpc ListUsers(ListUsersRequest) returns (ListUsersReply) {}
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserReply) {}
}
